rust_test_framework/tests/ui/duplicate_params_stacked.stderr
error: Duplicate test case value found
 --> tests/ui/duplicate_params_stacked.rs:4:15
  |
4 | #[test_params(1)]
  |               ^
